Added persistent loggin

--- a/BetBros.Server/Pages/History.razor
+++ b/BetBros.Server/Pages/History.razor
@@ -59,7 +59,7 @@ else
             {
                 <MudExpansionPanel>
                     <TitleContent>
-                        <MudGrid AlignItems="Center">
+                        <MudGrid>
                             <MudItem xs="12" sm="3">
                                 <MudText Typo="Typo.body1"><strong>Vecka @group.GameWeek.WeekNumber</strong></MudText>
                             </MudItem>
