--- a/BetBros.Server/Pages/Leaderboard.razor
+++ b/BetBros.Server/Pages/Leaderboard.razor
@@ -57,7 +57,7 @@
                             @foreach (var item in leaderboardItems)
                             {
                                 <MudPaper Class="pa-3" Elevation="1">
-                                    <MudGrid AlignItems="Center">
+                                    <MudGrid>
                                         <MudItem xs="2">
                                             @if (item.Rank == 1)
                                             {
