--- a/BetBros.Server/Components/App.razor
+++ b/BetBros.Server/Components/App.razor
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="@Assets["BetBros.Server.styles.css"]"/>
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
-    <HeadOutlet @rendermode="InteractiveServer"/>
+    <HeadOutlet @rendermode="@(new InteractiveServerRenderMode(prerender: false))"/>
 </head>
 
 <body>
-    <Routes @rendermode="InteractiveServer" />
+    <Routes @rendermode="@(new InteractiveServerRenderMode(prerender: false))" />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
